# Sync

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  PRD-open-source-word-level-audiobook-epub-sync.md  README.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: android-release.yml  backend-ci.yml  flutter-ci.yml
backend/: Dockerfile  Procfile  README.md  pyproject.toml
backend/src/sync_backend/: __init__.py  config.py  db.py  logging.py  main.py  models.py  services.py  storage.py
backend/src/sync_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/sync_backend/alignment/: __init__.py  audio.py  epub.py  interfaces.py  matching.py  matching_pipeline.py  pipeline.py  sync_export.py  transcription.py  transcription_pipeline.py
backend/src/sync_backend/api/: __init__.py  dependencies.py  errors.py  realtime.py  router.py  schemas.py
backend/src/sync_backend/api/routes/: health.py  projects.py  ws.py
backend/src/sync_backend/workers/: __init__.py  celery_app.py  matching.py  pipeline.py  transcription.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_main.py  test_matching.py  test_projects_api.py  test_storage.py  test_transcription_pipeline.py
deploy/env/: backend.env.example
deploy/nginx/: sync.conf
deploy/scripts/: generate_api_auth_token.sh  install_self_hosted.sh  post_deploy_check.sh
deploy/systemd/: sync-api.service  sync-worker.service
docs/contracts/: api.md  (+3 more)
flutter_app/: README.md  pubspec.yaml
(+96 files in other folders)
